--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "dotenv": "^2.0.0",
     "express": "^4.10.2"
   },
   "author": "mfischetti",
   "license": "ISC"
 }
-
