--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "dotenv": "^2.0.0",
-    "express": "^4.10.2"
+    "express": "^4.10.2",
+    "mongoose": "^4.6.0"
   },
   "author": "mfischetti",
   "license": "ISC"
