--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
     "dotenv": "^2.0.0",
     "express": "^4.10.2",
+    "install": "^0.8.1",
     "mongoose": "^4.6.0"
   },
   "author": "mfischetti",
