--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "dotenv": "^2.0.0",
+    "ejs": "^2.5.2",
     "express": "^4.10.2",
     "install": "^0.8.1",
     "mongoose": "^4.6.0"
